# num-format

./: .gitignore
num-format/: Cargo.toml
num-format-benches/: Cargo.toml
num-format-dev/: Cargo.toml
num-format-windows/: Cargo.toml
num-format/src/: buffer.rs  constants.rs  digit_table.rs  format.rs  impls.rs  itoa.rs  lib.rs  parsing.rs  ryu.rs  to_formatted_str.rs  to_formatted_string.rs
num-format/src/impls/: floats.rs  integers.rs  num.rs
num-format/src/itoa/: integer128.rs  integer32.rs  integer64.rs  integers.rs  udiv128.rs
num-format/src/ryu/: d2s.rs  f2s.rs  f2s_intrinsics.rs  float.rs  pretty.rs
num-format/src/ryu/pretty/: exponent.rs  mantissa.rs
num-format/tests/: test_float.rs
