[package]
name = "num-format-dev"
version = "0.1.0"

authors = ["Brian Myers <brian.carl.myers@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
indexmap = "1"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
